[gd_scene load_steps=6 format=2]

[ext_resource path="res://Levels/Level1.tscn" type="PackedScene" id=1]
[ext_resource path="res://Actors/PlayerTopDown.tscn" type="PackedScene" id=2]
[ext_resource path="res://Levels/SquareParticles.tscn" type="PackedScene" id=3]
[ext_resource path="res://Demo.gd" type="Script" id=4]
[ext_resource path="res://Levels/SceneIndicator.tscn" type="PackedScene" id=5]

[node name="Demo" type="Node2D"]
script = ExtResource( 4 )

[node name="Level1" parent="." instance=ExtResource( 1 )]
position = Vector2( 984, 536 )

[node name="PlayerTopDown" parent="Level1" instance=ExtResource( 2 )]
position = Vector2( -384, 384 )

[node name="Particles" type="Node2D" parent="."]
position = Vector2( 0, 6.15164 )
z_index = -1

[node name="Particles2D" parent="Particles" instance=ExtResource( 3 )]
position = Vector2( -121.523, 1195.41 )
rotation = -0.785397

[node name="Particles2D2" parent="Particles" instance=ExtResource( 3 )]
position = Vector2( 2061.16, -121.65 )
rotation = -3.92699

[node name="Particles2D3" parent="Particles" instance=ExtResource( 3 )]
position = Vector2( -100.477, -92.2747 )
rotation = 0.785397

[node name="Particles2D4" parent="Particles" instance=ExtResource( 3 )]
position = Vector2( 2034.14, 1205.72 )
rotation = -2.35619

[node name="SceneIndicator" parent="." instance=ExtResource( 5 )]
